<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:inputType="textCapWords|textPersonName"
        android:hint="@string/fragment_detail_hint_name"
        style="@style/ContactEditTextView"
        android:ems="10">
        <requestFocus/>
    </EditText>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:inputType="text|phone"
        android:hint="@string/fragment_detail_hint_phone"
        style="@style/ContactEditTextView"
        android:ems="10" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:hint ="@string/fragment_detail_hint_email"
        style="@style/ContactEditTextView"
        android:ems="10" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_detail_address" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:inputType="textCapWords|textPostalAddress"
        android:hint="@string/fragment_detail_hint_address"
        style="@style/ContactEditTextView"
        android:ems="10" />

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:hint="@string/fragment_detail_hint_city"
        style="@style/ContactEditTextView"
        android:ems="10" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_detail_button_save" />

</LinearLayout>
